--- a/src/CharactersComponents/Card.css
+++ b/src/CharactersComponents/Card.css
@@ -6,3 +6,17 @@
 .shadow {
   box-shadow: 0px 0px 14px -1px #373737;
 }
+
+.btn {
+  background-color: #396447;
+  color: white;
+  transition: 250ms ease-in-out;
+  border: none;
+  padding: 0.25em 1em;
+}
+
+.btn:hover {
+  color: #396447;
+  background-color: white;
+  transform: translateY(-2px);
+}
